--- a/themes/even/layouts/partials/footer.html
+++ b/themes/even/layouts/partials/footer.html
@@ -11,12 +11,11 @@
 
 <div class="copyright">
   <span class="power-by">
-    {{ (printf $lang.footer.powered `<a class="hexo-link" href="https://gohugo.io">Hugo</a>`) | safeHTML }}
+    Powered by <a class="hexo-link" href="https://gohugo.io">Hugo</a>
   </span>
   <span class="division">|</span>
   <span class="theme-info">
-    {{ $lang.footer.theme }} - 
-    <a class="theme-link" href="https://github.com/olOwOlo/hugo-theme-even">Even</a>
+    Theme - <a class="theme-link" href="https://github.com/olOwOlo/hugo-theme-even">Even</a>
   </span>
 
   {{ if .Site.Params.busuanzi.enable -}}
